cleanup gui package